--- a/homepage/config.json
+++ b/homepage/config.json
@@ -75,6 +75,12 @@
 				"icon": "/icons/miniflux.jpg"
 			},
 			{
+				"name": "Ollama",
+				"uri": "https://ollama.starbase80.dev",
+				"description": "Large language model",
+				"icon": "/icons/ollama.png"
+			},
+			{
 				"name": "Outline",
 				"uri": "https://outline.starbase80.dev",
 				"description": "Documentation",
