Updated Roher Twins image

--- a/homepage/config.json
+++ b/homepage/config.json
@@ -90,7 +90,7 @@
 				"name": "Roher Twins",
 				"uri": "https://rohertwins.starbase80.dev",
 				"description": "Weekly newsletter",
-				"icon": "/icons/rohertwins.jpg"
+				"icon": "/icons/roher-twins.png"
 			},
 			{
 				"name": "Shamir's Secrets",
