--- a/miniflux/compose.yml
+++ b/miniflux/compose.yml
@@ -1,6 +1,6 @@
 services:
   miniflux:
-    image: miniflux/miniflux:2.0.47
+    image: miniflux/miniflux
     container_name: miniflux
     env_file: env.miniflux
     restart: unless-stopped
