--- a/nginx/sites/nextcloud.conf
+++ b/nginx/sites/nextcloud.conf
@@ -21,8 +21,8 @@ server {
     proxy_set_header Host $http_host;
     proxy_set_header X-NginX-Proxy true;
 
-    # proxy_pass http://nextcloud_backend;
-    return 301 https://$host$request_uri;
+    proxy_pass http://nextcloud_backend;
+    # return 301 https://$host$request_uri;
   }
 }
 
