--- a/nginx/sites/nextcloud.conf
+++ b/nginx/sites/nextcloud.conf
@@ -37,7 +37,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
 
-        proxy_pass http://nextcloud_backend;
+        proxy_pass https://nextcloud_backend;
         # return 301 https://$host$request_uri;
     }
 }
