--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -66,7 +66,7 @@ services:
 
   # Get one certificate
   # letsencrypt_one:
-  #   image: certbot/certbot:v2.4.0
+  #   image: certbot/certbot
   #   container_name: switchboard_letsencrypt_one
   #   entrypoint: ""
   #   command: >
@@ -81,7 +81,7 @@ services:
 
   # Renew certificates
   letsencrypt:
-    image: certbot/certbot:v2.4.0
+    image: certbot/certbot
     container_name: switchboard_letsencrypt
     entrypoint: ""
     command: >
