I'm not using SELinux, but whatever

--- a/nextcloud/compose.yml
+++ b/nextcloud/compose.yml
@@ -31,7 +31,7 @@ services:
     # networks: # Is needed when you want to create the nextcloud-aio network with ipv6-support using this file, see the network config at the bottom of the file
       # - nextcloud-aio # Is needed when you want to create the nextcloud-aio network with ipv6-support using this file, see the network config at the bottom of the file
     # # Uncomment the following line when using SELinux
-    # security_opt: ["label:disable"]
+    security_opt: ["label:disable"]
 
 volumes: # If you want to store the data on a different drive, see https://github.com/nextcloud/all-in-one#how-to-store-the-filesinstallation-on-a-separate-drive
   nextcloud_aio_mastercontainer:
