--- a/nextcloud/compose.yml
+++ b/nextcloud/compose.yml
@@ -11,6 +11,8 @@ services:
       - 8300:8080 # Can be removed when running behind a web server or reverse proxy (like Apache, Nginx, Cloudflare Tunnel and else). See https://github.com/nextcloud/all-in-one/blob/main/reverse-proxy.md
     environment: # Is needed when using any of the options below
         - SKIP_DOMAIN_VALIDATION=true
+        - NEXTCLOUD_TRUSTED_DOMAINS = nextcloud.starbase80.dev   # the dns name under which your nextcloud should be accessable
+        - NC_TRUSTED_PROXIES="192.168.1.34"  # this is the NPM proxy ip address in the docker network !
         - APACHE_PORT=8300 # Is needed when running behind a web server or reverse proxy (like Apache, Nginx, Cloudflare Tunnel and else). See https://github.com/nextcloud/all-in-one/blob/main/reverse-proxy.md
         - APACHE_IP_BINDING=0.0.0.0 # Should be set when running behind a web server or reverse proxy (like Apache, Nginx, Cloudflare Tunnel and else) that is running on the same host. See https://github.com/nextcloud/all-in-one/blob/main/reverse-proxy.md
       # - BORG_RETENTION_POLICY=--keep-within=7d --keep-weekly=4 --keep-monthly=6 # Allows to adjust borgs retention policy. See https://github.com/nextcloud/all-in-one#how-to-adjust-borgs-retention-policy
