--- a/nginx/sites/nextcloud.conf
+++ b/nginx/sites/nextcloud.conf
@@ -49,22 +49,42 @@ server {
 
   access_log /var/log/nginx/nextcloud.starbase80.dev.access.logs;
   error_log /var/log/nginx/nextcloud.starbase80.dev.error.logs;
+
   ssl_protocols TLSv1.2 TLSv1.3;
   ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
   ssl_prefer_server_ciphers on;
   ssl_session_cache shared:SSL:10m;
   ssl_session_tickets off;
+
   ssl_certificate /etc/letsencrypt/live/nextcloud.starbase80.dev/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/nextcloud.starbase80.dev/privkey.pem;
+
   include /etc/nginx/snippets/authelia-location.conf;
+
   location ^~ /.well-known/acme-challenge {
     allow all;
     root /var/www/certbot;
   }
+
   location / {
-    include /etc/nginx/snippets/proxy.conf;
-    include /etc/nginx/snippets/authelia-authrequest.conf;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Forwarded-Scheme $scheme;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header Accept-Encoding "";
+    proxy_set_header Host $host;
+    client_body_buffer_size 512k;
+    proxy_read_timeout 86400s;
+    client_max_body_size 0;
+
+    # Websocket
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
+    
+    include /etc/nginx/snippets/authelia-authrequest.conf;
+
     proxy_pass http://nextcloud_backend;
   }
 }
