--- a/homepage/config.json
+++ b/homepage/config.json
@@ -75,6 +75,12 @@
 				"icon": "/icons/miniflux.jpg"
 			},
 			{
+				"name": "NextCloud",
+				"uri": "https://nextcloud.starbase80.dev",
+				"description": "Office suite",
+				"icon": "nextcloud"
+			},
+			{
 				"name": "Outline",
 				"uri": "https://outline.starbase80.dev",
 				"description": "Documentation",
