Starting PenPot SSL

--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -65,34 +65,34 @@ services:
     network_mode: host
 
   # Get one certificate
-  # letsencrypt_one:
-  #   image: certbot/certbot
-  #   container_name: switchboard_letsencrypt_one
-  #   entrypoint: ""
-  #   command: >
-  #     sh -c "certbot certonly --reinstall -n -v -d nextcloud.starbase80.dev --cert-name nextcloud.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
-  #   depends_on:
-  #     - nginx
-  #   volumes:
-  #     - letsencrypt:/etc/letsencrypt
-  #     - certbot:/var/www/certbot
-  #   environment:
-  #     - TERM=xterm
-
-  # Renew certificates
-  letsencrypt:
+  letsencrypt_one:
     image: certbot/certbot
-    container_name: switchboard_letsencrypt
+    container_name: switchboard_letsencrypt_one
     entrypoint: ""
     command: >
-      sh -c "certbot renew --keep-until-expiring -n -v"
+      sh -c "certbot certonly --reinstall -n -v -d penpot.starbase80.dev --cert-name penpot.starbase80.dev  --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
     depends_on:
-        - nginx
+      - nginx
     volumes:
-        - letsencrypt:/etc/letsencrypt
-        - certbot:/var/www/certbot
+      - letsencrypt:/etc/letsencrypt
+      - certbot:/var/www/certbot
     environment:
-        - TERM=xterm
+      - TERM=xterm
+
+  # Renew certificates
+  # letsencrypt:
+  #   image: certbot/certbot
+  #   container_name: switchboard_letsencrypt
+  #   entrypoint: ""
+  #   command: >
+  #     sh -c "certbot renew --keep-until-expiring -n -v"
+  #   depends_on:
+  #       - nginx
+  #   volumes:
+  #       - letsencrypt:/etc/letsencrypt
+  #       - certbot:/var/www/certbot
+  #   environment:
+  #       - TERM=xterm
 
 volumes:
   certbot:
