--- a/mastodon/compose.yml
+++ b/mastodon/compose.yml
@@ -38,17 +38,13 @@ services:
     container_name: mastodon_web
     restart: unless-stopped
     env_file: env.production
-    command: bash -c "rm -f /mastodon/tmp/pids/server.pid; bundle exec rails s -p 3000"
+    command: bundle exec puma -C config/puma.rb
     networks:
       - external_network
       - internal_network
     healthcheck:
       # prettier-ignore
-      test:
-        [
-          'CMD-SHELL',
-          'wget -q --spider --proxy=off localhost:3000/health || exit 1'
-        ]
+      test: ['CMD-SHELL',"curl -s --noproxy localhost localhost:3000/health | grep -q 'OK' || exit 1"]
     ports:
       - 8012:3000
     depends_on:
