--- a/mastodon/compose.yml
+++ b/mastodon/compose.yml
@@ -34,7 +34,7 @@ services:
       - redis:/data
 
   web:
-    image: ghcr.io/mastodon/mastodon
+    image: ghcr.io/mastodon/mastodon:v4.3.0
     container_name: mastodon_web
     restart: unless-stopped
     env_file: env.production
@@ -56,7 +56,7 @@ services:
       - "host.docker.internal:host-gateway"
 
   streaming:
-    image: ghcr.io/mastodon/mastodon-streaming
+    image: ghcr.io/mastodon/mastodon-streaming:v4.3.0
     container_name: mastodon_streaming
     restart: unless-stopped
     env_file: env.production
@@ -80,7 +80,7 @@ services:
       - "host.docker.internal:host-gateway"
 
   sidekiq:
-    image: ghcr.io/mastodon/mastodon
+    image: ghcr.io/mastodon/mastodon:v4.3.0
     container_name: mastodon_sidekiq
     restart: unless-stopped
     env_file: env.production
