--- a/calibre/compose.yml
+++ b/calibre/compose.yml
@@ -1,6 +1,6 @@
 services:
   calibre:
-    image: linuxserver/calibre-web:0.6.20
+    image: linuxserver/calibre-web:latest
     container_name: calibre
     environment:
       - PUID=1000
