New syntax for GitLab

--- a/nginx/sites/gitlab.conf
+++ b/nginx/sites/gitlab.conf
@@ -27,9 +27,10 @@ upstream gitlab_backend {
 # }
 
 server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
+  listen 443 ssl;
+  listen [::]:443 ssl;
   server_name gitlab.starbase80.dev;
+  http2;
 
   access_log /var/log/nginx/gitlab.starbase80.dev.access.logs;
   error_log /var/log/nginx/gitlab.starbase80.dev.error.logs;
