--- a/nginx/sites/gitlab.conf
+++ b/nginx/sites/gitlab.conf
@@ -30,7 +30,7 @@ server {
   listen 443 ssl;
   listen [::]:443 ssl;
   server_name gitlab.starbase80.dev;
-  http2;
+  http2 on;
 
   access_log /var/log/nginx/gitlab.starbase80.dev.access.logs;
   error_log /var/log/nginx/gitlab.starbase80.dev.error.logs;
