--- a/homepage/config.json
+++ b/homepage/config.json
@@ -55,6 +55,12 @@
 				"uri": "https://shamir.starbase80.dev",
 				"description": "Secret distribution",
 				"icon": "/icons/shamir.jpg"
+			},
+			{
+				"name": "Vaultwarden",
+				"uri": "http://starbase-80:8290",
+				"description": "Password manager",
+				"icon": "/icons/vaultwarden.svg"
 			}
 		]
 	},
