Removed unused calibre config Updated GitLab config

--- a/nginx/sites/gitlab.conf
+++ b/nginx/sites/gitlab.conf
@@ -27,8 +27,8 @@ upstream gitlab_backend {
 # }
 
 server {
-  listen 443 ssl;
-  listen [::]:443 ssl;
+  listen 443;
+  listen [::]:443;
   server_name gitlab.starbase80.dev;
   http2 on;
 
