--- a/nginx/sites/gitlab.conf
+++ b/nginx/sites/gitlab.conf
@@ -27,10 +27,9 @@ upstream gitlab_backend {
 # }
 
 server {
-  listen 443;
-  listen [::]:443;
+  listen 443 http2;
+  listen [::]:443 http2;
   server_name gitlab.starbase80.dev;
-  http2 on;
 
   access_log /var/log/nginx/gitlab.starbase80.dev.access.logs;
   error_log /var/log/nginx/gitlab.starbase80.dev.error.logs;
