Around and around we go

--- a/nginx/sites/gitlab.conf
+++ b/nginx/sites/gitlab.conf
@@ -27,8 +27,10 @@ upstream gitlab_backend {
 # }
 
 server {
-  listen 443 http2;
-  listen [::]:443 http2;
+  listen 443;
+  listen [::]:443;
+  http2 on;
+
   server_name gitlab.starbase80.dev;
 
   access_log /var/log/nginx/gitlab.starbase80.dev.access.logs;
